--- a/public/assets/font-end/css/select-project.css
+++ b/public/assets/font-end/css/select-project.css
@@ -281,7 +281,7 @@ footer {
 
 .promo_full {
     height: auto;
-    background: url(../image/67545293-bangkok-wallpapers.jpg) center center no-repeat fixed;
+    background: url(../image/banner2.jpg) center center no-repeat fixed;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
