--- a/public/assets/font-end/css/style.css
+++ b/public/assets/font-end/css/style.css
@@ -1,12 +1,12 @@
 .navbar-default {
     background-color: #fff;
-    border-color: #00c402;
+    border-color: #7d8f94;
 }
 .navbar-default .navbar-nav>li>a {
     color: #666 !important;
 }
 .navbar-default .navbar-nav>li>a:hover {
-    color: #118213 !important;
+    color: #7d8f94 !important;
 }
 .navbar-default .navbar-brand {
     color: #FFECF1;
@@ -20,7 +20,7 @@
 .intro-header {
     padding-top: 50px;
     padding-bottom: 50px;
-   
+
     color: #f8f8f8;
     background: url(../images/Untitled-1.png) no-repeat center center;
     background-size: cover;
@@ -29,7 +29,7 @@
     position: relative;
     min-height: 50px;
     margin-bottom: 0px;
- 
+
 }
 .btn-success1{
 	color: #fff;
@@ -54,12 +54,12 @@
     border-color: #ccc;
 }
 .intro-message {
-   
+
     padding-top: 10%;
     padding-bottom: 10%;
 }
 .banner{
-	
+
     border-bottom: 1px solid #e0e0e0;
     background-color: #00c402;
 }
@@ -154,7 +154,7 @@
 }
 
 footer {
-  
+
     color: #fff;
     background-color: #777;
 }
@@ -168,13 +168,13 @@ footer .footer-mailchimp {
     background-image: url(../images/connected.png);
 }
 footer .footer-menu {
-   
+
     background-color: #222;
     padding-top: 60px;
     border-top: 4px solid #555;
     color: #ccc;
 
-   
+
 }
 footer .footer-menu ul {
     padding: 0;
@@ -294,7 +294,7 @@ ul.social-icons li {
 }
 .content-section-b {
     padding: 50px 0;
-     background-color: #f5f5f5; 
+     background-color: #f5f5f5;
 }
 .head-line {
     position: absolute;
@@ -363,14 +363,14 @@ ul.social-icons li {
 
 #kimkundad .ap-comments.have-comments {
     background: #f8f8f8 none repeat scroll 0 0;
-   
+
     margin: 11px -11px -11px;
     padding-top: 8px;
     position: relative;
 }
 #kimkundad .ap-comments.have-comments {
     background: #fff none repeat scroll 0 0;
- 
+
     margin: 10px -21px -21px;
 }
 
