--- a/public/assets/font-end/css/style.css
+++ b/public/assets/font-end/css/style.css
@@ -303,7 +303,7 @@ ul.social-icons li {
     display: block;
     width: 50px;
     height: 3px;
-    background-color: #00c402;
+    background-color: #6f8590;
     margin: 0;
 }
 
